--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,15 @@
 
 :root{
-    --header-color: rgb(192,192,192);
+    --header-color: rgb(0,128,128);
     --section-color: rgb(212,175,55);
+    --img-border-color: rgb(0,0,0)
     
 }
 
 body {
-    background-color: royalblue;
     
+    background-image: url(new-york.jpg);
+    background-size: 1000px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -15,7 +17,8 @@ header {
     padding: 5px;
     box-sizing: border-box;
     background-color: var(--header-color);
-    
+    opacity: .8;
+    width: 100%;
 }
 
 header h1{
@@ -38,23 +41,60 @@ header li:hover{
     color: lightblue;
 }
 
+
 h2{
     text-decoration: underline;
 }
 
+/*adjusts each body section within the document */
 .info{
     box-sizing: border-box;
     margin: 5px;
     padding: 10px;
     background-color: var(--section-color);
     border-radius: 25px;
+    opacity: .8;
+    width: 100%;
    
 }
 
+/* adjusts the photo in the about me part of  the document */
 #aboutme img{
-    border-color: black;
+    border-color: var(--img-border-color);
     border-width: 10px;
     border-style: double;
     border-radius: 15px;
+    width: 200px;
+    opacity: 1;
 }
 
+/* adjusts the other photos throughout the document */
+img{
+    border-color: var(--img-border-color);
+    border-width: 10px;
+    border-style: double;
+    border-radius: 15px;
+    width: 50%;
+    opacity: 1;
+}
+
+#projects li{
+    display: flex
+}
+
+
+.example{
+    display: inline-block;
+    text-align: center;
+    width: 25%;
+}
+
+.launch{
+    display: block;
+    font-size: larger;
+}
+
+.example:hover{
+    width: 100%;
+    font-size: xx-large;
+}
